--- a/styles.css
+++ b/styles.css
@@ -12,17 +12,24 @@
 
 body {
     background-image: url(img/1170577.jpg);
+    background-attachment: fixed;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     font-family: var(--font-mono);
 }
 
+.marco{
+    position: absolute;
+    width: 900px;
+    height: 1000px;
+    float: initial;
+    top: -4%;
+    left: 26%;
+    z-index: -1;
+}
+
 section{
-    background-image: url(img/1170577.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     display: flex;
     flex-wrap: wrap;
     height: 100vh;
@@ -35,11 +42,22 @@ section h1{
     font-size: 3em;
 }
 
+.caja{
+    background-color: rgba(250, 235, 215, 0.308);
+    height: 40px;
+    width: 700px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
 section h2{
     text-align: center;
     width: 100%;
     margin-bottom: 1em;
     font-size: 2.5em;
+    color: #0f0f0f;
 }
 
 section form{
@@ -76,8 +94,8 @@ section form input{
 
 section form input[type=submit]{
     margin-top: 1.5em;
-    background-color: #3ddda0;
-    color: #070707;
+    background-color: #634432a1;
+    color: #ffffff;
     font-family: var(--font-mono);
     transition: var(--transition);
 }
@@ -113,4 +131,16 @@ section p a{
     font-size: 1.5rem;
     
 }
+
+.fondo{
+    background-color: rgba(250, 235, 215, 0.308);
+    height: 40px;
+    width: 400px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
 
