--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,24 @@ body {
 }
 
 .marco{
+    background-attachment: scroll;
     position: absolute;
-    width: 900px;
-    height: 1000px;
+    width: 1000px;
+    height: 82%;
     float: initial;
-    top: -4%;
-    left: 26%;
+    top: 6%;
+    left: 23%;
+    z-index: -1;
+}
+
+.marco2{
+    background-attachment: scroll;
+    position: absolute;
+    width: 70%;
+    height: 86%;
+    float: initial;
+    top: 6%;
+    left: 14.5%;
     z-index: -1;
 }
 
@@ -40,12 +52,24 @@ section{
 }
 section h1{
     font-size: 3em;
+    display: inline-block;
 }
 
 .caja{
-    background-color: rgba(250, 235, 215, 0.308);
+    background-color: #7a1e474d;
     height: 40px;
-    width: 700px;
+    width: 450px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.caja2{
+    background-color: #7a1e474d;
+    height: 40px;
+    width: 650px;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -57,7 +81,7 @@ section h2{
     width: 100%;
     margin-bottom: 1em;
     font-size: 2.5em;
-    color: #0f0f0f;
+    color: #ffffff;
 }
 
 section form{
@@ -94,7 +118,7 @@ section form input{
 
 section form input[type=submit]{
     margin-top: 1.5em;
-    background-color: #634432a1;
+    background-color: #7a1e47f5;
     color: #ffffff;
     font-family: var(--font-mono);
     transition: var(--transition);
@@ -122,6 +146,7 @@ section form input[type=submit]:active{
 }
 
 section p{
+    text-align: center;
     margin-top: 1.5em;
 }
 
@@ -133,7 +158,7 @@ section p a{
 }
 
 .fondo{
-    background-color: rgba(250, 235, 215, 0.308);
+    background-color: #7a1e474d;
     height: 40px;
     width: 400px;
     border-radius: 10px;
