actualiza el styles.css

--- a/styles.css
+++ b/styles.css
@@ -168,4 +168,25 @@ section p a{
     -o-border-radius: 10px;
 }
 
+/*home*/
 
+#logout{
+    text-align: center;
+    background-color: #7a1e474d;
+    color: #fff;
+    font-family: var(--font-mono);
+    transition: var(--transition);
+    -webkit-transition: var(--transition);
+    -moz-transition: var(--transition);
+    -ms-transition: var(--transition);
+    -o-transition: var(--transition);
+    border: none;
+    padding: 0.5em;
+    border-radius: 9px;
+    margin-top: 1.5em;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    -ms-border-radius: 9px;
+    -o-border-radius: 9px;
+    font-size: 1em;
+}
