--- a/index.css
+++ b/index.css
@@ -20,19 +20,41 @@ body {
 }
 
 section h2{
+    margin-top: 1%;
+    margin-left: 2%;
     text-align: left;
     width: 100%;
-    margin-bottom: 1em;
     font-size: 2.5em;
     color: #ffffff;
     display: inline-block;
+   
+}
+
+#caja{
+    text-align: center;
+    background-color: #7a1e474d;
+    height: 4%;
+    width: 40%;
+    border-radius: 9px;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    -ms-border-radius: 9px;
+    -o-border-radius: 9px;
+}
+
+button{
+    position: relative;
+    left: 30%;
+    margin-top: 1%;
+
 }
 
 #logout{
-    border-bottom: 15%;
-    width: 10%;
-    margin-top: 1.5em;
-    background-color: #7a1e47f5;
+    text-align: center;
+    width: 15%;
+    height: 10%;
+    margin-top: 1%;
+    background-color: #7a1e474d;
     color: #ffffff;
     font-family: var(--font-mono);
     transition: var(--transition);
