--- a/styles.css
+++ b/styles.css
@@ -171,3 +171,19 @@ section p a{
     -o-border-radius: 1%;
 }
 
+
+footer{
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+
+.copyright{
+    color:#FFFFFF;
+    font-size: 13px;
+    margin:20px;
+}
