actualiza el style.css

--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ section form label{
     width: 100%;
     padding: 0.2em;
     margin-bottom: 0.5em;
+    color: white;
 }
 
 section form input{
