--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background-image: url(img/1170577.jpg.);
+    background-image: url(img/1170577.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
