--- a/index.css
+++ b/index.css
@@ -4,14 +4,20 @@
     --transition: all 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
+/*-----------------------------------------------
+Global css
+---------------------------------------------=-*/
+:root{
+    --font:#e5e5e5;
+    --white:#ffffff;
+    --dark-blue:#0a3871;
+}
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    background-image: url(img/1170577.jpg);
+    background-image: url(img/1170577.jpg.);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
@@ -19,51 +25,75 @@ body {
     font-family: var(--font-mono);
 }
 
-section h2{
-    margin-top: 1%;
-    margin-left: 2%;
-    text-align: left;
+::selection{
+    background: var(--dark-blue);
+    color: red;
+
+}
+
+body{
+    height: 100%;
+}
+
+img{
+    max-width: 100%;
+}
+
+/*--encabezado--*/
+header{
+    position: absolute;
+    margin: 40px 0px 0px 40px;
+}
+
+header .logo{
+    display: flex;
+    align-items: flex-start;
+    width: 120px;
+    height: 40px;
+}
+
+header .caja{
+   text-align: center;
+   margin-top: 1%;
+   position: relative;
+   left: 185%;
+}
+
+/*--------------------
+Cierre de sesion
+-------------------*/
+div .cierre{
     width: 100%;
-    font-size: 2.5em;
-    color: #ffffff;
-    display: inline-block;
-   
-}
-
-#caja{
-    text-align: center;
-    background-color: #7a1e474d;
-    height: 4%;
-    width: 40%;
-    border-radius: 9px;
-    -webkit-border-radius: 9px;
-    -moz-border-radius: 9px;
-    -ms-border-radius: 9px;
-    -o-border-radius: 9px;
-}
-
-button{
-    position: relative;
-    left: 30%;
-    margin-top: 1%;
 
 }
 
-#logout{
-    text-align: center;
-    width: 15%;
-    height: 10%;
-    margin-top: 1%;
-    background-color: #7a1e474d;
-    color: #ffffff;
-    font-family: var(--font-mono);
-    transition: var(--transition);
-    border-radius:9PX;
-    -webkit-border-radius:9PX;
-    -moz-border-radius:9PX;
-    -ms-border-radius:9PX;
-    -o-border-radius:9PX;
+div .tiulo{
+    position: absolute;
+    top: 1%;
+    left: 37%;
+    font: bold;
+    font-size: 1.7rem;
+    
 }
+
+div .logout{
+    position: absolute;
+    top: 1%;
+    right: 1%;
+
+}
+
+/*----------------------
+Principal
+----------------------*/
+main{
+    display: flex;
+    flex-direction: row;
+    
+}
+
+
+
 
 footer{
     color: #fff;
