--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@
     --font:#e5e5e5;
     --white:#ffffff;
     --dark-blue:#0a3871;
+    --greey:#c5c5c5;
+    --fondo-tex:#9f0d4f4d;
+    --rgba:rgba(0,0,0,0.08);
+    --fondo-hover-boton:#c30a0abc;
+    --gree:#495057;
 }
 
 
@@ -32,6 +37,27 @@
 body{
     height: 100%;
 }
+
+/*--encabezado--*/
+header{
+    position: absolute;
+    margin: 40px 0px 0px 40px;
+}
+
+header .logo{
+    display: flex;
+    align-items: flex-start;
+    width: 120px;
+    height: 40px;
+}
+
+header .caja{
+   text-align: center;
+   margin-top: 1%;
+   position: relative;
+   left: 185%;
+}
+
 
 img{
     max-width: 100%;
@@ -150,6 +176,7 @@ section form input[type=submit]:active{
     -moz-transition: 1s;
     -ms-transition: 1s;
     -o-transition: 1s;
+    cursor: pointer;
 }
 
 section p{
@@ -177,18 +204,33 @@ section p a{
 
 
 footer{
-    color: #fff;
+    margin-top: 15px;
     text-align: center;
-    padding: 1% 0;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    z-index: -1;
+    padding: 10px;
+    border-top: 2px solid var(--fondo-tex);
+    color:var(--font);
+    text-align: center;
+    height: 5px;
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--font);
 }
 
 
+.linke:hover{
+    color: var(--greey);
+    opacity: 0.8;
+}
+
+.github{
+    background: var(--greey);
+}
+.github:hover{
+    color: var(--greey);
+    opacity: 0.6;
+}
 .copyright{
-    color:#FFFFFF;
+    color:var(--font);
     font-size: 13px;
-    margin:1%;
+    margin:10px;
 }
