--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ Global css
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url(img/1170577.jpg);
+    background-image: url(img/1170577-min.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
