--- a/styles.css
+++ b/styles.css
@@ -84,28 +84,7 @@ section h1{
     display: inline-block;
 }
 
-.caja{
-    background-color: #7a1e474d;
-    height: 4%;
-    width: 45%;
-    border-radius: 1%;
-    -webkit-border-radius: 1%;
-    -moz-border-radius: 1%;
-    -ms-border-radius: 1%;
-    -o-border-radius: 1%;
-}
 
-.caja2{
-    background-color: #7a1e474d;
-    height: 6%;
-    width: 45%;
-    margin-top: 5.5%;
-    border-radius: 1%;
-    -webkit-border-radius: 1%;
-    -moz-border-radius: 1%;
-    -ms-border-radius: 1%;
-    -o-border-radius: 1%;
-}
 section h2{
     text-align: center;
     width: 100%;
@@ -136,6 +115,20 @@ section form label{
 }
 
 section form input{
+    width: 100%;
+    margin-bottom: 1em;
+    padding: 0.8em;
+    border-radius: 9px;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    -ms-border-radius: 9px;
+    border: none;
+    outline-color: rgba(101, 199, 161, 0.76);
+    background-color: aliceblue;
+    -o-border-radius: 9px;
+}
+
+section form input[type="email"]{
     width: 100%;
     margin-bottom: 1em;
     padding: 0.8em;
@@ -233,4 +226,23 @@ footer{
     color:var(--font);
     font-size: 13px;
     margin:10px;
+}
+
+
+@media(max-width: 125px){
+    main{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+
+    }
+    .principal{
+        margin: 168px 0px 0px 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
 }
