--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,10 @@
     --font-mono: ui-monospace, menlo, monaco, 'cascadia mono', 'segoe ui mono',
     'fira mono', 'droid sans mono', 'courier new', monospace;
     --transition: all 0.1s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
 
-    --font:#e5e5e5;
+:root{
+--font:#e5e5e5;
     --white:#ffffff;
     --dark-blue:#0a3871;
     --greey:#c5c5c5;
@@ -13,17 +15,12 @@
     --gree:#495057;
 }
 
-
 *{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        background-image: url(img/1170577-min.jpg);
-        background-attachment: fixed;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        font-family: var(--font-mono);
+        
+    
 }
 
 ::selection{
@@ -33,7 +30,13 @@
 }
 
 body{
-    height: 100%;
+        height: 100%;
+        background-image: url(img/1170577-min.jpg);
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        font-family: var(--font-mono);
 }
 
 /*--encabezado--*/
@@ -49,22 +52,12 @@ header .logo{
     height: 40px;
 }
 
-header .caja{
-   text-align: center;
-   margin-top: 1%;
-   position: relative;
-   left: 185%;
-}
-
+/*----------------------
+Principal
+----------------------*/
 
 img{
     max-width: 100%;
-}
-
-
-.registro-caja{
-    margin: 1%;
-    display: block;
 }
 
 
@@ -126,11 +119,15 @@ section form input{
     background-color: aliceblue;
 }
 
+.principal input{
+    background-color: #ffffff;
+}
+
 
 section form input[type=submit]{
     margin-top: 1.5em;
     background-color: var(--fondo-tex);
-    color: #bb0909;
+    color: var(--font);
     font-family: var(--font-mono);
     transition: var(--transition);
 }
@@ -144,17 +141,9 @@ section form input[type=submit]:active{
 }
 
 .submit:hover{
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transition: 1s;
-    -webkit-transition: 1s;
-    -moz-transition: 1s;
-    -ms-transition: 1s;
-    -o-transition: 1s;
+    color: black;
     cursor: pointer;
+    background: rgb(125, 77, 173);
 }
 
 section p{
@@ -178,6 +167,11 @@ section p a{
     -moz-border-radius: 9px;
     -ms-border-radius: 9px;
     -o-border-radius: 9px;
+}
+
+.fondo a:hover{
+    color: blue;
+    font-size: 1.6rem;
 }
 
 /*------------------------------------
