--- a/index.css
+++ b/index.css
@@ -12,11 +12,11 @@ Global css
     --white:#ffffff;
     --dark-blue:#0a3871;
     --greey:#c5c5c5;
-    --fondo-tex:#9f0d4f4d;
+    --fondo-tex:#9e14524d;
     --rgba:rgba(0,0,0,0.08);
-    --fondo-hover-boton:#c30a0abc;
+    --fondo-hover-boton:#c30a0a9d;
     --gree:#495057;
-    --boton:#E74C3C;
+    --boton:#a33ce756;
 }
 
 *{
@@ -33,7 +33,7 @@ Global css
 
 ::selection{
     background: var(--dark-blue);
-    color: red;
+    color: rgba(255, 0, 0, 0.281);
 
 }
 
@@ -310,7 +310,7 @@ main{
     font-size: 16px;
     line-height: 19px;
     text-align: center;
-    background: var(--fondo-tex);
+    background: var(--boton);
     border: 1px solid var(--font);
     border-radius: 20px;
     -webkit-border-radius: 20px;
