--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     --greey:#c5c5c5;
     --fondo-tex:#9f0d4f4d;
     --rgba:rgba(0,0,0,0.08);
-    --fondo-hover-boton:#c30a0abc;
+    --fondo-hover-boton:#a9730ecc;
     --gree:#495057;
 }
 
@@ -31,7 +31,7 @@
 
 body{
         height: 100%;
-        background-image: url(img/1170577-min.jpg);
+        background-image: url(img/background-image-3497025_1920.jpg);
         background-attachment: fixed;
         background-size: cover;
         background-position: center;
@@ -90,19 +90,19 @@ section form{
     display: flex;
     flex-wrap: wrap;
     max-width: 500px;
-    border-radius: 2%;
-    -webkit-border-radius: 2%;
-    -moz-border-radius: 2%;
-    -ms-border-radius: 2%;
-    -o-border-radius: 2%;
-    border: 2px solid rgba(28, 45, 194, 0.486);
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    border: 4px solid white;
 }
 
 section form label{
     width: 100%;
     padding: 0.2em;
     margin-bottom: 0.5em;
-    color: white;
+    color: rgb(161, 229, 182);
 }
 
 section form input{
@@ -116,7 +116,7 @@ section form input{
     border: none;
     -o-border-radius: 9px;
     outline-color: rgba(101, 199, 161, 0.76);
-    background-color: aliceblue;
+    background-color: rgba(141, 218, 224, 0.249);
 }
 
 .principal input{
@@ -126,7 +126,7 @@ section form input{
 
 section form input[type=submit]{
     margin-top: 1.5em;
-    background-color: var(--fondo-tex);
+    background-color: var(--fondo-hover-boton);
     color: var(--font);
     font-family: var(--font-mono);
     transition: var(--transition);
@@ -134,16 +134,17 @@ section form input[type=submit]{
 
 section form input[type=submit]:active{
     transform: scale(0.97);
-    -webkit-transform: scale(0.97);
+    -webkit-transform: scale(0.1);
     -moz-transform: scale(0.97);
     -ms-transform: scale(0.97);
     -o-transform: scale(0.97);
 }
 
 .submit:hover{
-    color: black;
+    color: rgb(7, 7, 7);
     cursor: pointer;
-    background: rgb(125, 77, 173);
+    background: rgba(122, 227, 188, 0.444);
+    border: 2px solid white;
 }
 
 section p{
@@ -153,13 +154,13 @@ section p{
 
 section p a{
     text-decoration: none;
-    color: #808bac;
+    color: #f5eab7;
     font-size: 1.5rem;
     
 }
 
 .fondo{
-    background-color: #aa909c4d;
+    background-color: rgba(122, 227, 188, 0.444);
     height: 4%;
     width: 30%;
     border-radius: 9px;
