--- a/index.css
+++ b/index.css
@@ -12,18 +12,18 @@ Global css
     --white:#ffffff;
     --dark-blue:#0a3871;
     --greey:#c5c5c5;
-    --fondo-tex:#c0809d4d;
+    --fondo-tex:#4dd4d695;
     --rgba:rgba(0,0,0,0.08);
-    --fondo-hover-boton:#c30a0a9d;
+    --fondo-hover-boton:#3db2e8c9;
     --gree:#495057;
-    --boton:#a484b956;
+    --boton:#0379a7bd;
 }
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url(img/night-3129908_1920.jpg);
+    background-image: url(img/trees-4291517_1920.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
@@ -65,6 +65,15 @@ header .caja{
    left: 185%;
 }
 
+.tiulo{
+    background: rgba(0, 0, 0, 0.518);
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.556);
+}
 /*--------------------
 Cierre de sesion
 -------------------*/
@@ -136,7 +145,7 @@ main{
     font-size: 32px;
     line-height: 48px;
     outline: none;
-    border: 1px solid var(--greey);
+    border: 1px solid rgba(255, 255, 255, 0.621);
     border-radius: 12px;
     -webkit-border-radius: 12px;
     -moz-border-radius: 12px;
@@ -171,8 +180,17 @@ main{
     line-height: 150%;
     opacity: 0.8;
     color: var(--font);
+    background: black;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
 }
 
+.img-oso{
+    background: #4dd4d614;
+}
 .conten-encriptado{
     display: flex;
     flex-direction: row;
@@ -246,6 +264,7 @@ main{
     -ms-border-radius: 32px;
     -o-border-radius: 32px;
     text-align: center;
+    border: 2px solid rgba(255, 255, 255, 0.614);
 }
 
 .tarjeta-contenedor{
@@ -306,6 +325,7 @@ main{
     bottom: 0;
     left: 0;
     visibility: hidden;
+    color: #e5e5e5;
     padding: 24px;
     font-size: 16px;
     line-height: 19px;
