--- a/index.css
+++ b/index.css
@@ -135,6 +135,7 @@ main{
     width: 60%;
     margin: 168px 0px 0px 148px;
     background: transparent;
+    color: black;
 
 }
 
@@ -154,10 +155,11 @@ main{
     resize: none;
     background: var(--fondo-tex);
     text-align: center;
+    
 }
 
 .encriptada::placeholder, :focus{
-   color: var(--font);
+   color: black;
 }
 
 .encriptador-aviso{
@@ -252,17 +254,17 @@ main{
 }
 
 .tarjeta{
-    width: 270px;
+    width: 280px;
     height: 580px;
     background: var(--fondo-tex);
     box-shadow: 10px 24px 32px -8px var(--greey);
     position: relative;
-    margin-top: 40px;
-    border-radius: 32px;
-    -webkit-border-radius: 32px;
-    -moz-border-radius: 32px;
-    -ms-border-radius: 32px;
-    -o-border-radius: 32px;
+    margin-top: 45px;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
     text-align: center;
     border: 2px solid rgba(255, 255, 255, 0.614);
 }
@@ -298,13 +300,13 @@ main{
     width: 100%;
     height: 485px;
     position: absolute;
-    padding: 2px;
-    top: 0;
-    left: 0;
+    padding: 5px;
+    top: 1;
+    left: 5%;
     font-weight:400 ;
     font-size: 24px;
     line-height: 36px;
-    color: var(--gree);
+    color: black;
     background: transparent;
     border-top-right-radius: 32px;
     border-top-left-radius: 32px;
@@ -363,6 +365,34 @@ main{
   box-shadow: inset 1px 1px 3px black;
   }
 
+  .contenedor-icono{
+    display: flex;
+    position: absolute;
+    top: 85%;
+    left: 30%;
+    justify-content: center;
+    align-items: center;
+   
+  }
+
+  .icon-btn{
+   background-color: #acaf50;
+   border: none;
+   padding: 12px;
+   display: inline-block;
+   cursor: pointer;
+   border-radius: 50%;
+   -webkit-border-radius: 50%;
+   -moz-border-radius: 50%;
+   -ms-border-radius: 50%;
+   -o-border-radius: 50%;
+}
+
+.icon-btn img{
+    width: 40px;
+    height: 40px;
+}
+
 
   /*------------------------------------
   Pie de pagina
@@ -370,7 +400,7 @@ main{
 
 
   footer{
-    margin-top: 11%;
+    margin-top: 25%;
     text-align: center;
     padding: 10px;
     border-top: 2px solid var(--fondo-tex);
