--- a/styles.css
+++ b/styles.css
@@ -133,11 +133,11 @@ section form input[type=submit]{
 }
 
 section form input[type=submit]:active{
-    transform: scale(0.97);
-    -webkit-transform: scale(0.1);
-    -moz-transform: scale(0.97);
-    -ms-transform: scale(0.97);
-    -o-transform: scale(0.97);
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
 
 .submit:hover{
@@ -229,4 +229,14 @@ footer{
 
 }
 
-
+.popup-class{
+    border: 3px solid rgb(255, 255, 255);
+    width: 30%;
+    background: #7ac95bdd;
+    color: #fdf8f8;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+}
