--- a/index.css
+++ b/index.css
@@ -23,12 +23,7 @@ Global css
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url(img/trees-4291517_1920.jpg);
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    font-family: var(--font-mono);
+    
 }
 
 ::selection{
@@ -39,6 +34,12 @@ Global css
 
 body{
     height: 100%;
+    background-image: url(img/trees-4291517_1920.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    font-family: var(--font-mono);
 }
 
 img{
@@ -378,8 +379,25 @@ main{
     -o-border-radius: 45px;
     border: 3px solid black;
     background: var(--fondo-tex);
+    box-shadow: inset 3px 3px 6px white;
 }
 
+.icon-btn:hover{
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    box-shadow: inset 4px 4px 8px rgb(8, 109, 59);
+    box-shadow: inset -4px -4px 8px rgb(7, 58, 32);
+    transition: 0.78s;
+    -webkit-transition: 0.78s;
+    -moz-transition: 0.78s;
+    -ms-transition: 0.78s;
+    -o-transition: 0.78s;
+    border: 2px solid whitesmoke;
+}
+  
 .btn-borrar{
     font-size: 18px;
     background: var(--fondo-tex);
@@ -484,12 +502,12 @@ Media
     }
 
     .icon-btn{
-        display: block;
+        position: absolute;
         width: 9%;
         height: 7%;
         float: right;
-        top:  72%;
-        left: 45%;
+        top:  100%;
+        left: 48%;
     }
     .evaluar{
         width: 100%;
@@ -534,8 +552,8 @@ Media
         display: block;
         width: 20%;
         height: 9%;
-        float: right;
-        top:  120%;
+        position: absolute;
+        top:  110%;
         left: 43%;
     }
     .copyright{
