--- a/alertas.css
+++ b/alertas.css
@@ -13,6 +13,18 @@ Estilos de las alertas de ventana
     -o-border-radius: 25px;
 }
 
+.popop-class-mini{
+    border: 3px solid rgb(242, 19, 19);
+    color: #000000;
+    border-radius: 25px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    -ms-border-radius: 25px;
+    -o-border-radius: 25px;
+    font-size: 15px;
+
+}
+
 @media(max-width: 720px){
     .popup-class{
         max-width: 100%;
